--- a/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "SupermarketTabKinds" = "分类";
 "SupermarketTabShoppingCart" = "购物车";
 "SupermarketTabMine" = "我的";
-"SupermarketHomeTitle" = "网上药店";
+"SupermarketHomeTitle" = "外卖商家";
 "SupermarketHomeMyOrder" = "我的订单";
 "SupermarketHomeMyCollection" = "收藏夹";
 "SupermarketHomeScan" = "扫一扫";
