结果刚刚经过

--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -7,6 +7,7 @@
  */
 //MARK - FreshMart
 "SupermarketTabHome" = "메인";
+"TinyMallNearlyShop" = "주변상가";
 "SupermarketTabKinds" = "카테고리";
 "SupermarketTabShoppingCart" = "장바구니";
 "SupermarketTabMine" = "나의 정보";
@@ -416,6 +417,7 @@
 "我的钱包" = "나의지갑";
 "龙聊" = "메신저";
 "登录" ="로그인";
+"注册" = "";
 "新用户"="회원가입";
 "请输入您的手机号码"="핸드폰번호 입력하세요";
 "请输入登录密码"="로그인 비밀번호 입력하세요";
@@ -426,7 +428,7 @@
 "确认新密码"="새 비밀번호 확인하세요 ";
 "确认重置"="재설정확인";
 "忘记密码"="비밀번호 찾기";
-"注册并登录"="가입 및 로그인";
+"注册成功"="가입 및 로그인";
 "我的"="개인중심";
 "收藏"="복마크";
 "我的收藏"="나의복마크";
@@ -588,5 +590,39 @@
 "再次点餐" = "다시 주문";
 "您已预约成功,请及时前往餐厅就餐哦" = "예약이 완료되었습니다. 시간에 맞춰 방문해 주시기 바랍니다";
 "修改语言" = "개정언어";
+
+
+"个人会员"="개인회원";
+"企业会员"="사업자회원";
+"生产者会员"="생산자회원";
+"团体会员"="단체회원";
+"加盟商会员"="가맹점회원";
+"管理者会员"="상품관리자";
+"全部同意"="전체동의";
+"请输入昵称"="닉네임을 입력 해 주세요";
+"请输入密码"="비밀번호를 입력 해 주세요";
+"请输入电子邮件"="이메일을 입력 해 주세요";
+"请输入顾客姓名"="고객성함을 입력 해 주세요";
+"请输入代理编码"="우편번호를 입력 해 주세요";
+"请输入编码地址"="주소를 입력 해 주세요";
+"请输入详细地址"="상세주소를 입력 해 주세요";
+"返回"="뒤로가기";
+"手电筒"="플레시";
+"将二维码/条形码 放入框内中央，即可自动扫描"="프레임에 맞춰 QR코드를 스캔해 주세요";
+"查找地址"="주소찾기";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+
+
+
 
 
