--- a/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 //MARK - FreshMart
 "SupermarketTabHome" = "首页";
+"TinyMallNearlyShop" = "附近商家";
 "SupermarketTabKinds" = "分类";
 "SupermarketTabShoppingCart" = "购物车";
 "SupermarketTabMine" = "我的";
@@ -428,7 +429,7 @@
 "确认新密码"="Confirm new password ";
 "确认重置"="Confirm Reset";
 "忘记密码"="Forget Password";
-"注册并登录"="Register and login";
+"注册成功"="Register and login";
 "我的"="Profile";
 "收藏"="Collect";
 "我的收藏"="MyCollect";
@@ -551,3 +552,6 @@
 "2楼"="2 floor";
 "没有更多数据"="No data more";
 "修改语言" = "change language";
+
+
+
