--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -610,6 +610,21 @@
 "手电筒"="플레시";
 "将二维码/条形码 放入框内中央，即可自动扫描"="프레임에 맞춰 QR코드를 스캔해 주세요";
 "查找地址"="주소찾기";
+"搜索内容"="검색내용";
+"热门搜索"="인기검색";
+"历史搜索"="검색기록";
+"清空搜索历"="검색기록 삭제";
+"商品"="상품";
+"详情"="상세";
+"评价"="평가";
+"限量配送"="한정배송";
+"免邮"="무료배송";
+"24小时退/换货"="24시 교환/취소";
+"自提免邮费"="직접 수령 시 배송비용 없음";
+"冷藏"="냉장";
+"立即刷新"="새로고침";
+"加入购物车成功!"="";
+"没有选择任何商品"="";
 ""="";
 ""="";
 ""="";
@@ -618,9 +633,22 @@
 ""="";
 ""="";
 ""="";
+
 ""="";
 ""="";
 ""="";
+""="";
+""="";
+""="";
+
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+
+
 
 
 
