--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -613,7 +613,7 @@
 "搜索内容"="검색내용";
 "热门搜索"="인기검색";
 "历史搜索"="검색기록";
-"清空搜索历"="검색기록 삭제";
+"清空搜索历史"="검색기록 삭제";
 "商品"="상품";
 "详情"="상세";
 "评价"="평가";
@@ -623,10 +623,10 @@
 "自提免邮费"="직접 수령 시 배송비용 없음";
 "冷藏"="냉장";
 "立即刷新"="새로고침";
-"加入购物车成功"="";
-"没有选择任何商品"="";
-""="";
-""="";
+"加入购物车成功"="장바구니 담기 완료";
+"没有选择任何商品"="선택한 상품이 없습니다";
+"搜索关键字"="검색어 입력";
+"搜索结果"="검색결과";
 ""="";
 ""="";
 ""="";
