--- a/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
@@ -440,6 +440,39 @@
 "没有选择任何商品"="没有选择任何商品";
 "搜索关键字"="搜索关键字";
 "搜索结果"="搜索结果";
+"GIGA支付"="GIGA支付";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+""="";
+
 
 //"百货" = "百货";
 //"奢厨餐厅" = "奢厨餐厅";
