--- a/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 //MARK - FreshMart
 "SupermarketTabHome" = "首页";
 "SupermarketTabKinds" = "分类";
+"TinyMallNearlyShop" = "附近商家";
 "SupermarketTabShoppingCart" = "购物车";
 "SupermarketTabMine" = "我的";
 "SupermarketHomeTitle" = "网上药店";
