--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -423,7 +423,7 @@
 "请输入登录密码"="로그인 비밀번호 입력하세요";
 "再次输入登录密码"="로그인 비밀번호 다시 입력하세요";
 "请输入短信验证码"="인증 번호를 입력하세요";
-"接收验证码"="인증버호 받으세요";
+"接收验证码"="인증번호 받으세요";
 "设置新密码"="새 비밀번호 설정하세요";
 "确认新密码"="새 비밀번호 확인하세요 ";
 "确认重置"="재설정확인";
