--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -589,7 +589,7 @@
 "点菜详情" = "주문 내역";
 "再次点餐" = "다시 주문";
 "您已预约成功,请及时前往餐厅就餐哦" = "예약이 완료되었습니다. 시간에 맞춰 방문해 주시기 바랍니다";
-"修改语言" = "개정언어";
+"修改语言" = "언어변경";
 
 
 "个人会员"="개인회원";
