--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -629,8 +629,8 @@
 "搜索结果"="검색결과";
 "宇成支付"="宇成支付";
 "CFBundleDisplayName"="함께가게";
-""="";
-""="";
+"选择性别"="성별선택";
+"更改昵称"="닉네임 변경";
 ""="";
 ""="";
 
