--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -136,7 +136,7 @@
 "SMKindsNew" = "최신";
 "SMKindsSales" = "판매량";
 "SMKindsPrice" = "가격";
-"SMMyCollectionTitle" = "나의 찜하기";
+"SMMyCollectionTitle" = "즐겨찾기";
 "SMMyCollectionEmpty" = "찜 목록이 비어 있습니다!";
 "SMMyCollectionChooseAll" = "전체선택";
 "SMMyPointTitle" = "나의포인트";
@@ -190,7 +190,7 @@
 "SMShoppingCartBuyNow" = "즉시 구매";
 "SMShoppingCartEdit" = "편집";
 "SMShoppingCartFinish" = "완료";
-"WechatPay" = "우성페이";
+"WechatPay" = "기가페이";
 "UnionPay" = "유니온페이";
 "AliPay" = "알리페이";
 "PaySucMsg" = "결제완료";
@@ -443,7 +443,7 @@
 "更换头像"="프로필이미지변경";
 "性别"="성별";
 "男"="남";
-"女"="녀";
+"女"="여";
 "昵称"="닉네임";
 "更换昵称"="닉네임 변경";
 "确定"="확인";
@@ -497,7 +497,7 @@
 "去点餐"="주문하러 가기";
 "购物车为空"="장바구니 비어 있습니다";
 "选好了"="다 선택했습니다";
-"宇成支付"="우성페이";
+"宇成支付"="기가페이";
 "提交订单"="오더제출";
 "订单确认"="오더확인";
 "确认下单"="주문확인";
@@ -632,9 +632,8 @@
 "选择性别"="성별선택";
 "更改昵称"="닉네임 변경";
 "暂无评论"="현재 평가가 없습니다";
-"填写完整资料进入下一步"="";
-
-""="";
+"填写完整资料进入下一步"="항목을 기입한 후 다음단계로";
+"再次购买"="다시구매";
 ""="";
 ""="";
 ""="";
