--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -70,7 +70,7 @@
 "SMOrderWaitCommentStatus" = "평가대기";
 "SMOrderFinishStatus" = "주문완료";
 "SMOrderCloseTitle" = "주문마감";
-"SMGoPayMsg" = "결제하기(남은 시간)";
+"SMGoPayMsg" = "결제하기";
 "还剩"="남은시간";
 "SMOrderUseless" = "주문 취소";
 "SMExpressMsg" = "배송비(택배)";
