托遗响于悲风 抱明月以常终

--- a/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
@@ -500,7 +500,7 @@
 "购物车为空"="the shop car is null";
 "选好了"="Choose finish";
 "keshiyongjifendiaoxiao"=" 0.00포인트로0.00위안을 삭감";
-"宇成支付"="Yucheng pay";
+"气加支付"="GIGA Pay";
 "提交订单"="order commit";
 "订单确认"="Order confirm";
 "确认下单"="Order confirm";
