--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -498,7 +498,7 @@
 "去点餐"="주문하러 가기";
 "购物车为空"="장바구니 비어 있습니다";
 "选好了"="다 선택했습니다";
-"宇成支付"="기가페이";
+"气加支付"="GIGA Pay";
 "提交订单"="오더제출";
 "订单确认"="오더확인";
 "确认下单"="주문확인";
@@ -628,7 +628,7 @@
 "没有选择任何商品"="선택한 상품이 없습니다";
 "搜索关键字"="검색어 입력";
 "搜索结果"="검색결과";
-"宇成支付"="宇成支付";
+"气加支付"="GIGA Pay";
 "CFBundleDisplayName"="함께가게";
 "选择性别"="성별선택";
 "更改昵称"="닉네임 변경";
