--- a/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
@@ -442,7 +442,7 @@
 "没有选择任何商品"="没有选择任何商品";
 "搜索关键字"="搜索关键字";
 "搜索结果"="搜索结果";
-"宇成支付"="宇成支付";
+"气加支付"="气加支付";
 "CFBundleDisplayName"="联合商家";
 "填写完整资料进入下一步"="填写完整资料进入下一步";
 "再次购买"="再次购买";
