--- a/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
@@ -446,7 +446,7 @@
 "CFBundleDisplayName"="联合商家";
 "填写完整资料进入下一步"="填写完整资料进入下一步";
 "再次购买"="再次购买";
-""="";
+"确定删除订单？"="确定删除订单？";
 ""="";
 ""="";
 ""="";
