--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -424,12 +424,12 @@
 "请输入登录密码"="로그인 비밀번호 입력하세요";
 "再次输入登录密码"="로그인 비밀번호 다시 입력하세요";
 "请输入短信验证码"="인증 번호를 입력하세요";
-"接收验证码"="인증번호 받으세요";
+"接收验证码"="인증번호 받기";
 "设置新密码"="새 비밀번호 설정하세요";
 "确认新密码"="새 비밀번호 확인하세요 ";
 "确认重置"="재설정확인";
 "忘记密码"="비밀번호 찾기";
-"注册成功"="가입 및 로그인";
+"注册成功"="가입을 환영합니다!";
 "我的"="개인중심";
 "收藏"="복마크";
 "我的收藏"="나의복마크";
