--- a/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/Base.lproj/Localizable.strings
@@ -640,92 +640,92 @@
 
 
 
-//
-//"订单管理" = "주문관리";
-//"商品管理" = "상품관리";
-//"评价管理" = "평가관리";
-//"退款订单" = "환불주문";
-//"数据统计" = "데이터통계";
-//"店铺信息" = "상가정보";
-//"营业中" = "영업중";
-//"打烊中" = "영업종료";
-//"今日销售数据" = "당일 매출통계";
-//"今日营业额（元）" = "당일 매출액(원)";
-//"今日订单数（单）" = "당일 주문수(건)";
-//"新订单" = "신규주문";
-//"已完成" = "완료주문";
-//"总计" = "합계";
-//"(含配送费 ￥" = "(배송비포함 ￥";
-//"订单号：" = "주문번호：";
-//"订单时间: " = "주문시간";
-//"取消订单" = "주문취소";
-//"接单"= "주문접수";
-//"已接单" = "접수완료";
-//"订单商品" = "주문상품";
-//"打开" = "열기";
-//"收起" = "접기";
-//"接单成功!" = "주문을 접수하였습니다";
-//"确定" = "환인";
-//"销售中" = "판매중";
-//"已下架" = "판매종료";
-//"重新编辑" = "편집하기";
-//"取消编辑并退出？" = "편집을 취소하시겠습니까?";
-//"继续编辑"  = "취소";
-//"更换图片" = "이미지 변경";
-//"基本信息" = "기본정보";
-//"商品分类:" = "상품분류";
-//"附加信息" = "기타정보";
-//"规格：" = "규격:";
-//"口味：" = "입맛:";
-//"保存并上架" = "저장하기";
-//"月售 " = "주문수 ";
-//"确定下架此商品？" = "선택한 제품을 판매종료 하시겠습니까?";
-//"全部分类" = "전체분류";
-//"输入分类名称" = "분류명칭을 입력해 주십시오";
-//"全部(" = "전체（";
-//"差评(" = " 비추천（";
-//"未读(" = "미확인（";
-//"商家回复：" = "사장님댓글";
-//"共" = "총";
-//"条" = "개";
-//"星" = "성";
-//"修改" = "수정";
-//"完成" = "답변";
-//"今日" = "금일";
-//"本周" = "이번주";
-//"本月" = "이번달";
-//"自定" = "날짜지정";
-//"营业额(元)" = "매출액(원)";
-//"总订单(单)" = "주문수(건)";
-//"退款额(元)" = "환불액(원)";
-//"退款订单(单)" = "환불수(건)";
-//"店铺头像" = "상가이미지";
-//"店铺名称" = "상가명칭";
-//"客服电话" = "연락처";
-//"店铺地址" = "주소";
-//
-//"待退货" = "반품대기";
-//"已处理" = "처리완료";
-//"自定查询区间" = "날자지정";
-//"从" = "시작";
-//"至" = "종료";
-//"期间" = "기간";
-//"订单" = "주문";
-//"修改头像图片" = "이미지변경";
-//"相册" = "사진첩";
-//"照相" = "촬영";
-//"规格名称" = "규격명칭";
-//"规格价格" = "규격가격";
-//"新增规格" = "규격추가";
-//"新增口味" = "입맛추가";
-//"口味名称" = "입맛명칭";
-//"产品上架" = "제품업로드";
-//"确定删除？" = "삭제하시겠습니까?";
-//"数据" = "데이터";
-//"确定上架此商品？" = "해당 제품을 업로드하시겠습니까?";
-//"感谢您的支持与喜欢！我们会努力做到更好！" = "고객님의 만족을 위해 최선을 다하겠습니다!";
-//
-//
+
+"订单管理" = "주문관리";
+"商品管理" = "상품관리";
+"评价管理" = "평가관리";
+"退款订单" = "환불주문";
+"数据统计" = "데이터통계";
+"店铺信息" = "상가정보";
+"营业中" = "영업중";
+"打烊中" = "영업종료";
+"今日销售数据" = "당일 매출통계";
+"今日营业额（元）" = "당일 매출액(원)";
+"今日订单数（单）" = "당일 주문수(건)";
+"新订单" = "신규주문";
+"已完成" = "완료주문";
+"总计" = "합계";
+"(含配送费 ￥" = "(배송비포함 ￥";
+"订单号：" = "주문번호：";
+"订单时间: " = "주문시간";
+"取消订单" = "주문취소";
+"接单"= "주문접수";
+"已接单" = "접수완료";
+"订单商品" = "주문상품";
+"打开" = "열기";
+"收起" = "접기";
+"接单成功!" = "주문을 접수하였습니다";
+"确定" = "환인";
+"销售中" = "판매중";
+"已下架" = "판매종료";
+"重新编辑" = "편집하기";
+"取消编辑并退出？" = "편집을 취소하시겠습니까?";
+"继续编辑"  = "취소";
+"更换图片" = "이미지 변경";
+"基本信息" = "기본정보";
+"商品分类:" = "상품분류";
+"附加信息" = "기타정보";
+"规格：" = "규격:";
+"口味：" = "입맛:";
+"保存并上架" = "저장하기";
+"月售 " = "주문수 ";
+"确定下架此商品？" = "선택한 제품을 판매종료 하시겠습니까?";
+"全部分类" = "전체분류";
+"输入分类名称" = "분류명칭을 입력해 주십시오";
+"全部(" = "전체（";
+"差评(" = " 비추천（";
+"未读(" = "미확인（";
+"商家回复：" = "사장님댓글";
+"共" = "총";
+"条" = "개";
+"星" = "성";
+"修改" = "수정";
+"完成" = "답변";
+"今日" = "금일";
+"本周" = "이번주";
+"本月" = "이번달";
+"自定" = "날짜지정";
+"营业额(元)" = "매출액(원)";
+"总订单(单)" = "주문수(건)";
+"退款额(元)" = "환불액(원)";
+"退款订单(单)" = "환불수(건)";
+"店铺头像" = "상가이미지";
+"店铺名称" = "상가명칭";
+"客服电话" = "연락처";
+"店铺地址" = "주소";
+
+"待退货" = "반품대기";
+"已处理" = "처리완료";
+"自定查询区间" = "날자지정";
+"从" = "시작";
+"至" = "종료";
+"期间" = "기간";
+"订单" = "주문";
+"修改头像图片" = "이미지변경";
+"相册" = "사진첩";
+"照相" = "촬영";
+"规格名称" = "규격명칭";
+"规格价格" = "규격가격";
+"新增规格" = "규격추가";
+"新增口味" = "입맛추가";
+"口味名称" = "입맛명칭";
+"产品上架" = "제품업로드";
+"确定删除？" = "삭제하시겠습니까?";
+"数据" = "데이터";
+"确定上架此商品？" = "해당 제품을 업로드하시겠습니까?";
+"感谢您的支持与喜欢！我们会努力做到更好！" = "고객님의 만족을 위해 최선을 다하겠습니다!";
+
+
 
 
 
