--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -723,17 +723,16 @@
 "确定上架此商品？" = "해당 제품을 업로드하시겠습니까?";
 "感谢您的支持与喜欢！我们会努力做到更好！" = "고객님의 만족을 위해 최선을 다하겠습니다!";
 
-"已发货" = "";
-"已拒单" = "";
-"重新编辑" = "";
-"下架商品" = "";
-"回复评论" = "";
-"手机号码：" = "";
-"订单状态：" = "";
-"查看" = "";
-"我的店铺" = "";
-
-
+//"已发货" = "";
+//"已拒单" = "";
+//"重新编辑" = "";
+//"下架商品" = "";
+//"回复评论" = "";
+//"手机号码：" = "";
+//"订单状态：" = "";
+//"查看" = "";
+//"我的店铺" = "";
+//"取消发货" = "";
 
 
 
