--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -734,6 +734,18 @@
 "取消发货" = "발송취소";
 "暂无数据" = "데이터가 없습니다";
 
+"已发货" = "발송완료";
+"已拒单" = "취소완료";
+"重新编辑" = "다시편집";
+"下架商品" = "판매중지";
+"回复评论" = "리뷰등록";
+"手机号码：" = "전화번호：";
+"订单状态：" = "주문상태：";
+"查看" = "조회";
+"我的店铺" = "나의상가";
+"取消发货" = "발송취소";
+"暂无数据" = "데이터가 없습니다";
+
 "修改名字" = "";
 "修改联系方式" = "";
 "输入商铺名称" = "";
