--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -750,9 +750,17 @@
 "修改联系方式" = "";
 "输入商铺名称" = "";
 "输入商铺电话" = "";
-"" = "";
-"" = "";
 
+"选择地址" = "주소선택";
+"暂无内容" = "내용이 없습니다";
+"搜索结果" = "검색결과";
+"搜索" = "검색";
+" 共搜索出 " = " 모두 ";
+" 条" " = 개의 결과가 있습니다";
+"邮编：" = "우편번호：";
+"地址：" = "주소：";
+"选择" = "선택";
+"详细地址" = "상세주소";
 
 
 
