--- a/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/ko.lproj/Localizable.strings
@@ -756,7 +756,7 @@
 "搜索结果" = "검색결과";
 "搜索" = "검색";
 " 共搜索出 " = " 모두 ";
-" 条" " = 개의 결과가 있습니다";
+" 条" = "개의 결과가 있습니다";
 "邮编：" = "우편번호：";
 "地址：" = "주소：";
 "选择" = "선택";
