--- a/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
+++ b/RunsheungIOS/portal/Portal/zh-Hans.lproj/Localizable.strings
@@ -738,11 +738,12 @@
 "搜索结果" = "검색결과";
 "搜索" = "검색";
 " 共搜索出 " = " 모두 ";
-" 条" " = 개의 결과가 있습니다";
+" 条" = "개의 결과가 있습니다";
 "邮编：" = "우편번호：";
 "地址：" = "주소：";
 "选择" = "선택";
 "详细地址" = "상세주소";
+
 
 
 
